Revert "Clean up"
This reverts commit 2f68de88a8049a5b142ed15cd987683289706d98.

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "authors": [
         {
             "name": "Sam Mousa",
-            "email": "sam@mousa.nl"
+            "email": "sam@marketflow.nl"
         }
     ],
     "autoload": {
